# TODO(per-gron): hash and pubkey have a circular dependency. Untangle.
cc_library(
  name = "hash",
  visibility = ["//visibility:public"],
  srcs = [
    "hash.cpp",
    "pubkey.cpp"
  ],
  hdrs = [
    "hash.h",
    "pubkey.h"
  ],
  deps = [
    ":serialize",
    ":uint256",
    ":version",
    "//src/crypto:hmac_sha512",
    "//src/crypto:ripemd160",
    "//src/crypto:sha256",
    "//src/secp256k1",
  ],
)

cc_library(
  name = "serialize",
  visibility = ["//visibility:public"],
  hdrs = ["serialize.h"],
)

cc_library(
  name = "streams",
  visibility = ["//visibility:public"],
  hdrs = ["streams.h"],
  deps = [
    ":serialize",
    "//src/support/allocators:zeroafterfree",
  ],
)

cc_library(
  name = "tinyformat",
  visibility = ["//visibility:public"],
  hdrs = ["tinyformat.h"],
)

cc_library(
  name = "uint252",
  visibility = ["//visibility:public"],
  hdrs = ["uint252.h"],
  deps = [
    ":serialize",
    ":uint256",
  ],
)

cc_library(
  name = "uint256",
  visibility = ["//visibility:public"],
  srcs = ["uint256.cpp"],
  hdrs = ["uint256.h"],
  deps = [
    ":utilstrencodings",
  ],
)

cc_library(
  name = "utilstrencodings",
  visibility = ["//visibility:public"],
  srcs = ["utilstrencodings.cpp"],
  hdrs = ["utilstrencodings.h"],
  deps = [
    ":tinyformat",
  ],
)

cc_library(
  name = "version",
  visibility = ["//visibility:public"],
  hdrs = ["version.h"],
)
