cc_library(
  name = "amount",
  visibility = ["//visibility:public"],
  srcs = ["amount.cpp"],
  hdrs = ["amount.h"],
  deps = [
    ":serialize",
    ":tinyformat",
  ],
)

cc_library(
  name = "compat",
  visibility = ["//visibility:public"],
  hdrs = ["compat.h"],
  deps = [
    "//src/config:bitcoin-config",
  ],
)

# TODO(per-gron): hash and pubkey have a circular dependency. Untangle.
cc_library(
  name = "hash",
  visibility = ["//visibility:public"],
  srcs = [
    "hash.cpp",
    "pubkey.cpp"
  ],
  hdrs = [
    "hash.h",
    "pubkey.h"
  ],
  deps = [
    ":serialize",
    ":uint256",
    ":version",
    "//src/crypto:hmac_sha512",
    "//src/crypto:ripemd160",
    "//src/crypto:sha256",
    "//src/secp256k1",
  ],
)

cc_library(
  name = "serialize",
  visibility = ["//visibility:public"],
  hdrs = ["serialize.h"],
  deps = [
    "//src/compat:endian",
  ],
)

cc_library(
  name = "streams",
  visibility = ["//visibility:public"],
  hdrs = ["streams.h"],
  deps = [
    ":serialize",
    "//src/support/allocators:zeroafterfree",
  ],
)

cc_library(
  name = "threadsafety",
  visibility = ["//visibility:public"],
  hdrs = ["threadsafety.h"],
)

cc_library(
  name = "tinyformat",
  visibility = ["//visibility:public"],
  hdrs = ["tinyformat.h"],
)

cc_library(
  name = "uint252",
  visibility = ["//visibility:public"],
  hdrs = ["uint252.h"],
  deps = [
    ":serialize",
    ":uint256",
  ],
)

cc_library(
  name = "uint256",
  visibility = ["//visibility:public"],
  srcs = ["uint256.cpp"],
  hdrs = ["uint256.h"],
  deps = [
    ":utilstrencodings",
  ],
)

# TODO(per-gron): util, random, sync and chainparamsbase have circular dependencies. Untangle.
cc_library(
  name = "util",
  visibility = ["//visibility:public"],
  srcs = [
    "chainparamsbase.cpp",
    "random.cpp",
    "sync.cpp",
    "util.cpp",
  ],
  hdrs = [
    "chainparamsbase.h",
    "random.h",
    "sync.h",
    "util.h",
  ],
  deps = [
    ":compat",
    ":serialize",
    ":threadsafety",
    ":tinyformat",
    ":uint256",
    ":utiltime",
    ":utilstrencodings",
    "@boost//:algorithm",
    "@boost//:filesystem",
    "@boost//:foreach",
    "@boost//:program_options",
    "@boost//:signals2",
    "@boost//:thread",
    "@libsodium//:sodium",
    "@openssl//:crypto",
    "//src/config:bitcoin-config",
    "//src/support:cleanse",
  ],
)

cc_library(
  name = "utiltime",
  visibility = ["//visibility:public"],
  srcs = ["utiltime.cpp"],
  hdrs = ["utiltime.h"],
  deps = [
    "@boost//:date_time",
    "@boost//:thread",
    "//src/config:bitcoin-config",
  ],
)

cc_library(
  name = "utilstrencodings",
  visibility = ["//visibility:public"],
  srcs = ["utilstrencodings.cpp"],
  hdrs = ["utilstrencodings.h"],
  deps = [
    ":tinyformat",
  ],
)

cc_library(
  name = "version",
  visibility = ["//visibility:public"],
  hdrs = ["version.h"],
)
