libsnark_headers = [
    "src/algebra/curves/alt_bn128/alt_bn128_g1.hpp",
    "src/algebra/curves/alt_bn128/alt_bn128_g2.hpp",
    "src/algebra/curves/alt_bn128/alt_bn128_init.hpp",
    "src/algebra/curves/alt_bn128/alt_bn128_pairing.hpp",
    "src/algebra/curves/alt_bn128/alt_bn128_pp.hpp",
    "src/algebra/curves/curve_utils.hpp",
    "src/algebra/curves/public_params.hpp",
    "src/algebra/evaluation_domain/domains/basic_radix2_domain.hpp",
    "src/algebra/evaluation_domain/domains/basic_radix2_domain_aux.hpp",
    "src/algebra/evaluation_domain/evaluation_domain.hpp",
    "src/algebra/exponentiation/exponentiation.hpp",
    "src/algebra/fields/bigint.hpp",
    "src/algebra/fields/field_utils.hpp",
    "src/algebra/fields/fp.hpp",
    "src/algebra/fields/fp12_2over3over2.hpp",
    "src/algebra/fields/fp2.hpp",
    "src/algebra/fields/fp6_3over2.hpp",
    "src/algebra/knowledge_commitment/knowledge_commitment.hpp",
    "src/algebra/scalar_multiplication/kc_multiexp.hpp",
    "src/algebra/scalar_multiplication/multiexp.hpp",
    "src/algebra/scalar_multiplication/wnaf.hpp",
    "src/common/assert_except.hpp",
    "src/common/data_structures/accumulation_vector.hpp",
    "src/common/data_structures/merkle_tree.hpp",
    "src/common/data_structures/sparse_vector.hpp",
    "src/common/default_types/ec_pp.hpp",
    "src/common/default_types/r1cs_ppzksnark_pp.hpp",
    "src/common/profiling.hpp",
    "src/common/serialization.hpp",
    "src/common/template_utils.hpp",
    "src/common/utils.hpp",
    "src/gadgetlib1/constraint_profiling.hpp",
    "src/gadgetlib1/examples/simple_example.hpp",
    "src/gadgetlib1/gadget.hpp",
    "src/gadgetlib1/gadgets/basic_gadgets.hpp",
    "src/gadgetlib1/gadgets/gadget_from_r1cs.hpp",
    "src/gadgetlib1/gadgets/hashes/digest_selector_gadget.hpp",
    "src/gadgetlib1/gadgets/hashes/hash_io.hpp",
    "src/gadgetlib1/gadgets/hashes/sha256/sha256_aux.hpp",
    "src/gadgetlib1/gadgets/hashes/sha256/sha256_components.hpp",
    "src/gadgetlib1/gadgets/hashes/sha256/sha256_gadget.hpp",
    "src/gadgetlib1/gadgets/merkle_tree/merkle_authentication_path_variable.hpp",
    "src/gadgetlib1/gadgets/merkle_tree/merkle_tree_check_read_gadget.hpp",
    "src/gadgetlib1/gadgets/merkle_tree/merkle_tree_check_update_gadget.hpp",
    "src/gadgetlib1/pb_variable.hpp",
    "src/gadgetlib1/protoboard.hpp",
    "src/reductions/r1cs_to_qap/r1cs_to_qap.hpp",
    "src/relations/arithmetic_programs/qap/qap.hpp",
    "src/relations/constraint_satisfaction_problems/r1cs/examples/r1cs_examples.hpp",
    "src/relations/constraint_satisfaction_problems/r1cs/r1cs.hpp",
    "src/relations/variable.hpp",
    "src/zk_proof_systems/ppzksnark/r1cs_ppzksnark/examples/run_r1cs_ppzksnark.hpp",
    "src/zk_proof_systems/ppzksnark/r1cs_ppzksnark/r1cs_ppzksnark.hpp",
    "src/zk_proof_systems/ppzksnark/r1cs_ppzksnark/r1cs_ppzksnark_params.hpp",
]

cc_library(
    name = "libsnark",
    visibility = ["//visibility:public"],
    includes = ["src"],
    strip_include_prefix = "src",
    include_prefix = "libsnark",
    # NOTE(per-gron): Because of how Bazel handles include_prefix it is necessary
    # to specify the headers both in hdrs and srcs.
    hdrs = libsnark_headers,
    textual_hdrs = [
        "src/algebra/curves/curve_utils.tcc",
        "src/algebra/evaluation_domain/domains/basic_radix2_domain.tcc",
        "src/algebra/evaluation_domain/domains/basic_radix2_domain_aux.tcc",
        "src/algebra/evaluation_domain/evaluation_domain.tcc",
        "src/algebra/exponentiation/exponentiation.tcc",
        "src/algebra/fields/bigint.tcc",
        "src/algebra/fields/field_utils.tcc",
        "src/algebra/fields/fp.tcc",
        "src/algebra/fields/fp12_2over3over2.tcc",
        "src/algebra/fields/fp2.tcc",
        "src/algebra/fields/fp6_3over2.tcc",
        "src/algebra/fields/fp_aux.tcc",
        "src/algebra/knowledge_commitment/knowledge_commitment.tcc",
        "src/algebra/scalar_multiplication/kc_multiexp.tcc",
        "src/algebra/scalar_multiplication/multiexp.tcc",
        "src/algebra/scalar_multiplication/wnaf.tcc",
        "src/common/data_structures/accumulation_vector.tcc",
        "src/common/data_structures/merkle_tree.tcc",
        "src/common/data_structures/sparse_vector.tcc",
        "src/common/serialization.tcc",
        "src/common/utils.tcc",
        "src/gadgetlib1/examples/simple_example.tcc",
        "src/gadgetlib1/gadget.tcc",
        "src/gadgetlib1/gadgets/basic_gadgets.tcc",
        "src/gadgetlib1/gadgets/gadget_from_r1cs.tcc",
        "src/gadgetlib1/gadgets/hashes/digest_selector_gadget.tcc",
        "src/gadgetlib1/gadgets/hashes/hash_io.tcc",
        "src/gadgetlib1/gadgets/hashes/sha256/sha256_aux.tcc",
        "src/gadgetlib1/gadgets/hashes/sha256/sha256_components.tcc",
        "src/gadgetlib1/gadgets/hashes/sha256/sha256_gadget.tcc",
        "src/gadgetlib1/gadgets/merkle_tree/merkle_authentication_path_variable.tcc",
        "src/gadgetlib1/gadgets/merkle_tree/merkle_tree_check_read_gadget.tcc",
        "src/gadgetlib1/gadgets/merkle_tree/merkle_tree_check_update_gadget.tcc",
        "src/gadgetlib1/pb_variable.tcc",
        "src/gadgetlib1/protoboard.tcc",
        "src/reductions/r1cs_to_qap/r1cs_to_qap.tcc",
        "src/relations/arithmetic_programs/qap/qap.tcc",
        "src/relations/constraint_satisfaction_problems/r1cs/examples/r1cs_examples.tcc",
        "src/relations/constraint_satisfaction_problems/r1cs/r1cs.tcc",
        "src/relations/variable.tcc",
        "src/zk_proof_systems/ppzksnark/r1cs_ppzksnark/examples/run_r1cs_ppzksnark.tcc",
        "src/zk_proof_systems/ppzksnark/r1cs_ppzksnark/r1cs_ppzksnark.tcc",
    ],
    srcs = libsnark_headers + [
        "src/algebra/curves/alt_bn128/alt_bn128_g1.cpp",
        "src/algebra/curves/alt_bn128/alt_bn128_g2.cpp",
        "src/algebra/curves/alt_bn128/alt_bn128_init.cpp",
        "src/algebra/curves/alt_bn128/alt_bn128_pairing.cpp",
        "src/algebra/curves/alt_bn128/alt_bn128_pp.cpp",
        "src/common/profiling.cpp",
        "src/common/utils.cpp",
        "src/gadgetlib1/constraint_profiling.cpp",
    ],
    copts = [
        "-std=c++11",
        "-Wall",
        "-Wextra",
        "-Wno-unused-parameter",
        "-Wno-comment",
        "-Wfatal-errors",
        "-march=native",
        "-mtune=native",
        "-DBN_SUPPORT_SNARK",
        "-iquote",
        "src/snark/src",
    ],
    defines = [
        "USE_ASM",
        "MONTGOMERY_OUTPUT",
        "CURVE_ALT_BN128",
        "BINARY_OUTPUT",
    ],
    deps = [
        "@libgmp//:gmp",
        "@libsodium//:sodium",
        "@procps//:procps",
    ],
)
